2010-03-08  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Adam Barth.

        Fix webkit-patch post and land to work well with security bug
        https://bugs.webkit.org/show_bug.cgi?id=35733

        Bugzilla requires authentication to access security bug page,
        so call authenticate() if it failed to fetch bug page.

        * Scripts/webkitpy/bugzilla.py:

2010-03-04  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitry Glazkov.

        Fix --clobber-old-results in new-run-webkit-tests.

        https://bugs.webkit.org/show_bug.cgi?id=35778

        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-03-08  Brady Eidson  <beidson@apple.com>

        Reviewed by NOBODY (but suggested by Steve Falkenburg and fixing a boneheaded mistake on my part last week)

        Followup to https://bugs.webkit.org/show_bug.cgi?id=35532

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::apiTestGoToCurrentBackForwardItem): Can't pass in a null BOOL to WebKit APIs.

2010-03-08  Chris Jerdonek  <cjerdonek@webkit.org>

        Unreviewed.

        Fixed incorrect import statement in validate-committer-lists:
        webkitpy.BeautifulSoup -> webkitpy.thirdparty.BeautifulSoup.

        * Scripts/validate-committer-lists:

2010-03-08  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Blob.slice support.
        https://bugs.webkit.org/show_bug.cgi?id=32993

        Add ENABLE_BLOB_SLICE feature define and  flag for build-webkit. It is
        currently only turned on for Mac.

        * Scripts/build-webkit:

2010-03-08  Gustavo Noronha Silva  <gns@gnome.org>

        No review, rolling out r55662.
        http://trac.webkit.org/changeset/55662
        https://bugs.webkit.org/show_bug.cgi?id=35863

        Need to be coordinated with bots setup

        * Scripts/run-webkit-tests:

2010-03-08  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
